--- a/AMCO/club.html
+++ b/AMCO/club.html
@@ -4,10 +4,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="cette page traite des différentes informations du club de l'Amicale Motos Cyclos Occitanie. Une association de Moto-cross et Vélo basée dans l'Ariège"/>
+  <meta name="description" content="cette page évoque les différentes étapes de la création du club de l'Amicale Motos Cyclos Occitanie. Une association de Moto-cross et Vélo basée dans l'Ariège"/>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" >
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Caveat&display=swap"> 
+
   <link rel="stylesheet" href="/Style/style.css">
   <title>Détail du club de l'Amicale Motos Cyclos Occitanie</title>
 </head>
@@ -69,6 +75,7 @@
         </div>
       </div>
     </nav>
+    <!--Menu latéral-->
     <div class="menu_nav">  
       <div class="container">
         <a class="navbar-brand text-warning" id="sidebar">Menu</a>
@@ -132,6 +139,7 @@
         </div>
       </div>
     </div> 
+    
     <main>
       <div class="club my-4">
         <h1>Le club</h1>
@@ -146,7 +154,7 @@
                     <div class="card-body mt-2 pt-2">
                       <p class="card-text">Le club a été créé en <u><strong>2001</strong></u> sous l'appellation Moto Kart Club (M.K.C), affilié à la Fédération UFOLEP depuis sa création.</p>
                       <p class="card-text">Après plusieurs mutations il est devenu depuis l'Assemblée Générale du <u><strong>24 Octobre 2009</strong></u> l'A.M.Q.A.P, fruit de la fusion du club avec des passionnés de Motos Anciennes et de Quad de la basse Ariège.</p>
-                      <p class="card-text">Suite à l'Assemblée Générale extraordinaire du <u><strong>3 Novembre 2017</strong></u>  les membres du bureau proposent de changer le nom du club. celui-ci devient <u>l'Amicale Moto Cyclo Occitanie</u></p>
+                      <p class="card-text">Suite à l'Assemblée Générale extraordinaire du <u><strong>3 Novembre 2017</strong></u>  les membres du bureau proposent de changer le nom du club. celui-ci devient <u>l'Amicale Moto Cyclo Occitanie.</u></p>
                     </div>
                   </div>
                 </section>
@@ -247,9 +255,11 @@
     </div>
     </footer>
   </div>
+
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-M9LV3Q9WST"></script>
   <script>
