--- a/AMCO/photos.html
+++ b/AMCO/photos.html
@@ -6,8 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"> 
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Caveat&display=swap"> 
+  
   <link rel="stylesheet" href="/Style/style.css">
+  
   <title>Photos de l'Amicale Motos Cyclos Occitanie</title>
   <meta name="description" content="Retrouvez tous les évènements organisés par les membres de l'équipe de l'Amicale Motos Cyclos Occitanie. Une association de Moto-cross et Vélo basée dans l'Ariège"/>
 </head>
@@ -69,150 +78,122 @@
         </div>
       </div>
     </nav>
-    <div class="menu_nav">  
-      <div class="container">
-        <a class="navbar-brand text-warning" id="sidebar">Menu</a>
-        <ul class="list-unstyled mt-5">
-            <li class="nav-item ">
-              <a class="nav-link" href="/index.html">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door" viewbox="0 0 16 16">
-                  <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z"/>
-                </svg> Accueil
-              </a>
-            </li>
-            <!--<li class="nav-item">
-              <a class="nav-link" href="/AMCO/evenement.html"> 
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar3-event text-success" viewbox="0 0 16 16">
-                  <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z"/>
-                  <path d="M12 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
-                </svg> Evènements
-              </a>
-            </li>-->
-            <li class="nav-item">
-              <a class="nav-link"  href="/AMCO/club.html">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bicycle " viewbox="0 0 16 16">
-                  <path d="M4 4.5a.5.5 0 0 1 .5-.5H6a.5.5 0 0 1 0 1v.5h4.14l.386-1.158A.5.5 0 0 1 11 4h1a.5.5 0 0 1 0 1h-.64l-.311.935.807 1.29a3 3 0 1 1-.848.53l-.508-.812-2.076 3.322A.5.5 0 0 1 8 10.5H5.959a3 3 0 1 1-1.815-3.274L5 5.856V5h-.5a.5.5 0 0 1-.5-.5zm1.5 2.443-.508.814c.5.444.85 1.054.967 1.743h1.139L5.5 6.943zM8 9.057 9.598 6.5H6.402L8 9.057zM4.937 9.5a1.997 1.997 0 0 0-.487-.877l-.548.877h1.035zM3.603 8.092A2 2 0 1 0 4.937 10.5H3a.5.5 0 0 1-.424-.765l1.027-1.643zm7.947.53a2 2 0 1 0 .848-.53l1.026 1.643a.5.5 0 1 1-.848.53L11.55 8.303z"/>
-                </svg> Le club
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active disabled text-warning" aria-current="page" href="#">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-images" viewbox="0 0 16 16">
-                  <path d="M4.502 9a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
-                  <path d="M14.002 13a2 2 0 0 1-2 2h-10a2 2 0 0 1-2-2V5A2 2 0 0 1 2 3a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v8a2 2 0 0 1-1.998 2zM14 2H4a1 1 0 0 0-1 1h9.002a2 2 0 0 1 2 2v7A1 1 0 0 0 15 11V3a1 1 0 0 0-1-1zM2.002 4a1 1 0 0 0-1 1v8l2.646-2.354a.5.5 0 0 1 .63-.030l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094l1.777 1.947V5a1 1 0 0 0-1-1h-10z"/>
-                </svg> Photos
-              </a>
-            </li>
-            <li class="nav-item dropdown ">
-              <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-archive" viewbox="0 0 16 16">
-                <path d="M0 2a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1v7.5a2.5 2.5 0 0 1-2.5 2.5h-9A2.5 2.5 0 0 1 1 12.5V5a1 1 0 0 1-1-1V2zm2 3v7.5A1.5 1.5 0 0 0 3.5 14h9a1.5 1.5 0 0 0 1.5-1.5V5H2zm13-3H1v2h14V2zM5 7.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
-                </svg> Archives</a>
-                <ul class="dropdown-menu pt-0" id="dropdown_menu_archives">
-                  <li><a class="dropdown-item text-center" href="/AMCO/Archives/2016-2018.html">2016 - 2018</a></li>
-                  <li><a class="dropdown-item text-center" href="/AMCO/Archives/2011-2015.html">2011 - 2015</a></li>
-                </ul>
-            </li>
-        </ul>
-        <div class="menu_footer">
-          <div class="container pt-2 text-center">
+    <!--Menu latéral-->
+    <div class="menu_nav" >  
+          <div class="container">
+            <a class="navbar-brand text-warning" id="sidebar">Menu</a>
+            <ul class="list-unstyled mt-5">
+                <li class="nav-item ">
+                  <a class="nav-link" aria-current="page" href="/index.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door" viewbox="0 0 16 16">
+                      <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z"/>
+                    </svg> Accueil
+                  </a>
+                </li>
+                <!--<li class="nav-item">
+                  <a class="nav-link" href="/AMCO/evenement.html"> 
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar3-event text-success" viewbox="0 0 16 16">
+                      <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z"/>
+                      <path d="M12 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+                    </svg> Evènements
+                  </a>
+                </li>-->
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="/AMCO/club.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bicycle " viewbox="0 0 16 16">
+                      <path d="M4 4.5a.5.5 0 0 1 .5-.5H6a.5.5 0 0 1 0 1v.5h4.14l.386-1.158A.5.5 0 0 1 11 4h1a.5.5 0 0 1 0 1h-.64l-.311.935.807 1.29a3 3 0 1 1-.848.53l-.508-.812-2.076 3.322A.5.5 0 0 1 8 10.5H5.959a3 3 0 1 1-1.815-3.274L5 5.856V5h-.5a.5.5 0 0 1-.5-.5zm1.5 2.443-.508.814c.5.444.85 1.054.967 1.743h1.139L5.5 6.943zM8 9.057 9.598 6.5H6.402L8 9.057zM4.937 9.5a1.997 1.997 0 0 0-.487-.877l-.548.877h1.035zM3.603 8.092A2 2 0 1 0 4.937 10.5H3a.5.5 0 0 1-.424-.765l1.027-1.643zm7.947.53a2 2 0 1 0 .848-.53l1.026 1.643a.5.5 0 1 1-.848.53L11.55 8.303z"/>
+                    </svg> Le club
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active disabled text-warning" href="#">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-images" viewbox="0 0 16 16">
+                      <path d="M4.502 9a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
+                      <path d="M14.002 13a2 2 0 0 1-2 2h-10a2 2 0 0 1-2-2V5A2 2 0 0 1 2 3a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v8a2 2 0 0 1-1.998 2zM14 2H4a1 1 0 0 0-1 1h9.002a2 2 0 0 1 2 2v7A1 1 0 0 0 15 11V3a1 1 0 0 0-1-1zM2.002 4a1 1 0 0 0-1 1v8l2.646-2.354a.5.5 0 0 1 .63-.030l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094l1.777 1.947V5a1 1 0 0 0-1-1h-10z"/>
+                    </svg> Photos
+                  </a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-archive" viewbox="0 0 16 16">
+                    <path d="M0 2a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1v7.5a2.5 2.5 0 0 1-2.5 2.5h-9A2.5 2.5 0 0 1 1 12.5V5a1 1 0 0 1-1-1V2zm2 3v7.5A1.5 1.5 0 0 0 3.5 14h9a1.5 1.5 0 0 0 1.5-1.5V5H2zm13-3H1v2h14V2zM5 7.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
+                    </svg> Archives</a>
+                    <ul class="dropdown-menu" id="dropdown_menu_archives">
+                      <li>
+                        <a class="dropdown-item" href="/AMCO/Archives/2016-2018.html">2016 - 2018</a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="/AMCO/Archives/2011-2015.html">2011 - 2015</a>
+                      </li>
+                    </ul>
+                </li>
+            </ul>
+            <div class="menu_footer">
+              <div class="container pt-2 text-center">
+                <div class="row">
+                  <div class="col">
+                    <a href="https://www.ufolep.org/" target="blank"><img src="/Annexe/Images/Affiliation/ufolep.png" alt="" width="130" height="60"></a> 
+                  </div>
+                  <div class="col">  
+                    <a href="https://www.ffmoto.org/" target="blank"><img src="/Annexe/Images/Affiliation/logo-FFM.jpg" alt="" width="130" height="60"></a> 
+                  </div>
+                  <div class="col">
+                    <a href="https://www.lmoc.fr/" target="blank"><img src="/Annexe/Images/Affiliation/Lmoc.jpg" alt="" width="130" height="60"></a> 
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+    </div> 
+
+    <main>
+      <div class="pictures my-4">
+        <h1>Photos</h1>
+        <div class="wrapper mx-1">
+          <article>
             <div class="row">
               <div class="col">
-                <a href="https://www.ufolep.org/" target="blank"><img src="/Annexe/Images/Affiliation/ufolep.png" alt="" width="130" height="60"></a> 
-              </div>
-              <div class="col">  
-                <a href="https://www.ffmoto.org/" target="blank"><img src="/Annexe/Images/Affiliation/logo-FFM.jpg" alt="" width="130" height="60"></a> 
-              </div>
-              <div class="col">
-                <a href="https://www.lmoc.fr/" target="blank"><img src="/Annexe/Images/Affiliation/Lmoc.jpg" alt="" width="130" height="60"></a> 
+                <section class="carousel-2011">
+                  <h2 class="text-danger mt-2">Sainte Suzanne 2011</h2>
+                  <div id="sainte_suzanne_2011" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121765.JPG" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121769.JPG" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121770.JPG" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121772.JPG" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121779.JPG" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121780.JPG" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121805.JPG" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                    <div class="d-flex" id="carousel_control" >
+                      <button class=" d-flex carousel-control-prev " type="button" data-bs-target="#sainte_suzanne_2011" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only" >Previous</span>
+                      </button>
+                      <button class="  d-flex carousel-control-next" type="button" data-bs-target="#sainte_suzanne_2011" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                      </button>
+                    </div>
+                  </div>
+                </section>
               </div>
             </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <main>
-      <div class="pictures mt-4">
-        <h1>Photos</h1>
-        <div class="row" id="first_slideshow">
-          <h2 class="my-2">Saint Suzanne 2011</h2>
-          <div id="my_first_carousel" class="carousel slide" data-ride="carousel">
-            <!--<ol class="carousel-indicators">
-              <li data-target="#my_first_carousel" data-slide-to="765" class="active"></li>
-              <li data-target="#my_first_carousel" data-slide-to="769"></li>
-              <li data-target="#my_first_carousel" data-slide-to="770"></li>
-            </ol>--> 
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                  <img class="d-block" src="../Annexe/Photos/Ste_suzanne_2011/Z6121765.JPG" alt="765">
-              </div>
-              <div class="carousel-item">
-                  <img class="d-block" src="../Annexe/Photos/Ste_suzanne_2011/Z6121769.JPG" alt="769">
-              </div>
-              <div class="carousel-item">
-                  <img class="d-block" src="../Annexe/Photos/Ste_suzanne_2011/Z6121770.JPG" alt="770">
-              </div>
-              <div class="carousel-item">
-                  <img class="d-block" src="../Annexe/Photos/Ste_suzanne_2011/Z6121772.JPG" alt="770">
-              </div>
-              <div class="carousel-item">
-                  <img class="d-block" src="../Annexe/Photos/Ste_suzanne_2011/Z6121779.JPG" alt="770" width="330" height="200">  
-              </div>
-              <div class="carousel-item">
-                  <img class="d-block" src="../Annexe/Photos/Ste_suzanne_2011/Z6121780.JPG" alt="770">
-              </div>
-              
-            </div>
-            <!-- Controls -->
-            <button class="carousel-control-prev" type="button" data-bs-target="#my_first_carousel" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Précédente</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#my_first_carousel" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Suivante</span>
-            </button>
-          </div>
-        </div>
-        <div class="row mt-3" id="second_slideshow">
-          <h2 class="my-2">Saint Suzanne 2010</h2>
-          <div id="my_second_carousel" class="carousel slide" data-ride="carousel">
-            <!--<ol class="carousel-indicators">
-              <li data-target="#my_first_carousel" data-slide-to="765" class="active"></li>
-              <li data-target="#my_first_carousel" data-slide-to="769"></li>
-              <li data-target="#my_first_carousel" data-slide-to="770"></li>
-            </ol>--> 
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                  <img class="d-block" src="../Annexe/Photos/Ste_suzanne-2010/Z5237179.JPG" alt="765">
-              </div>
-              <div class="carousel-item">
-                  <img class="d-block" src="../Annexe/Photos/Ste_suzanne-2010/Z5237197.JPG" alt="769">
-              </div>
-              <div class="carousel-item">
-                  <img class="d-block" src="../Annexe/Photos/Ste_suzanne-2010/Z5237212.JPG" alt="770">
-              </div>
-              <div class="carousel-item">
-                  <img class="d-block" src="../Annexe/Photos/Ste_suzanne-2010/Z5237217.JPG" alt="770">
-              </div>
-              <div class="carousel-item">
-                  <img class="d-block" src="../Annexe/Photos/Ste_suzanne-2010/Z5237242.JPG" alt="770" >  
-              </div>
-              <div class="carousel-item">
-                  <img class="d-block" src="../Annexe/Photos/Ste_suzanne-2010/Z5237273.JPG" alt="770">
-              </div>
-              
-            </div>
-            <!-- Controls -->
-            <button class="carousel-control-prev" type="button" data-bs-target="#my_second_carousel" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Précédente</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#my_second_carousel" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Suivante</span>
-            </button>
+          </article>
 
-          </div>
         </div>
       </div>
     </main>
@@ -246,9 +227,14 @@
       </div>
     </footer>
   </div>
+  
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+  
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-M9LV3Q9WST"></script>
   <script>
@@ -260,5 +246,4 @@
   </script>
 </body>
 </html>
-
 
