--- a/AMCO/photos.html
+++ b/AMCO/photos.html
@@ -153,32 +153,154 @@
             <div class="row">
               <div class="col">
                 <section class="carousel-2011">
-                  <h2 class="text-danger mt-2">Sainte Suzanne 2011</h2>
+                  <h2 class="mt-2">Sainte Suzanne 2011</h2>
                   <div id="sainte_suzanne_2011" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121765.JPG" class="d-block w-100" alt="...">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z5237217.JPG" class="d-block" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121769.JPG" class="d-block w-100" alt="...">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z5237242.JPG" class="d-block" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121770.JPG" class="d-block w-100" alt="...">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z5237273.JPG" class="d-block" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121772.JPG" class="d-block w-100" alt="...">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z5237315.JPG" class="d-block" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121779.JPG" class="d-block w-100" alt="...">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121193.JPG" class="d-block" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121780.JPG" class="d-block w-100" alt="...">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121194.JPG" class="d-block" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121805.JPG" class="d-block w-100" alt="...">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121196.JPG" class="d-block" alt="...">
                       </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121202.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121207.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121208.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121228.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121230.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121231.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121267.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121306.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121308.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121365.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121389.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121395.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121765.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121766.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121769.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121770.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121772.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121779.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121780.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121788.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121803.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121805.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121808.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121814.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121817.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121818.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121819.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121831.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121834.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121840.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121871.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121873.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121874.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121883.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121899.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121911.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121920.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121940.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121770.JPG" class="d-block" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Annexe/Photos/Ste_suzanne_2011/Z6121956.JPG" class="d-block" alt="...">
+                      </div>
+                     
+                      
                     </div>
-                    <div class="d-flex" id="carousel_control" >
+                    <div class="d-flex" id="carousel_control">
                       <button class=" d-flex carousel-control-prev " type="button" data-bs-target="#sainte_suzanne_2011" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="sr-only" >Previous</span>
